2011-08-20; Stephane Fillod <fillods@users.sf.net>
	* Makefile.am:
	Fixes for make distcheck

	* src/Makefile.am:
	Don't define GDK_DISABLE_DEPRECATED/GTK_DISABLE_DEPRECATED
	until the code base is converted to more recent gtk.

	* configure.ac, README, TODO, NEWS, AUTHORS:
	* po/Makevars, po/grig.pot, po/fr.po:
	Update for 0.8.0

2011-06-24; Stephane Fillod <fillods@users.sf.net>

	* src/rig-gui-lcd.c:
	Fix VFO indicator not being repainted after window minimization

2011-06-21; Nirgal Vourgère <contact_hamlib@nirgal.com>

	* NEWS:
	* src/key-press-handler.c:
	Now using left/right arrows rather than up/down for freq change

2011-06-21; Nirgal Vourgère <contact_hamlib@nirgal.com>

	* src/grig-debug.c:
	* src/rig-data.c:
	* rig-gui-message-window.c:
	* src/rig-selector.c:
	Removed a bunch of unused vars

	* doc/man/grig.1.in:
	Escaped addtionnal '-' in man file

	* po/POTFILES.in:
	Added extra files containing strings to translate

	* src/rig-gui-lcd.[ch]:
	Added an extra gigahertz digit in lcd display

2010-03-02; Stephane Fillod <fillods@users.sf.net>

	* src/rig-gui-message-window.c:
	* src/grig-about.c:
	Replace deprecated calls since Gtk 2.14

	* src/rig-daemon-check.c:
	* src/rig-data.[ch]:
	* src/rig-gui-ctrl2.c:
	Added antenna control.

	* src/rig-gui-lcd.c:
	Fix buffer access out-of-bounds, found by cppcheck.

	* po/fr.po:
	Misc update.


2010-02-05; Alexandru Csete <oz9aec@gmail.com>

    * src/rig-gui-lcd.c:
    Fix crash that occurs when mouse is clicked between MHz and kHz digits.
    Reported as Ubuntu bug 517816.


2009-01-21; Alessandro Zummo <a.zummo@towertech.it>

	* src/rig-gui-vfo.c:
	Added memory/vfo button.


2009-01-13; Alessandro Zummo <a.zummo@towertech.it>

	* src/rig-gui-lcd.c:
	Do not clear frequency if user hits return and
	the new freq has not been entered.


2009-01-13; Alessandro Zummo <a.zummo@towertech.it>

	* src/grig-debug.c:
	Fixed debug levels


2008-12-15; Stephane Fillod <fillods@users.sf.net>

	* src/grig-menubar.[ch]: