@@ -1,3 +1,11 @@
+2015-12-19; Stephane Fillod <fillods@users.sf.net>
+	* Makefile.am, configure.ac:
+	* src/Makefile.am:
+	Keep-up with newer versions of autotools.
+
+	* src/rig-daemon.c src/main.c:
+	Don't call deprecated glib functions and use the new gthread API.
+
 2011-08-20; Stephane Fillod <fillods@users.sf.net>
 	* Makefile.am:
 	Fixes for make distcheck
